--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,9 @@
 {
-    "name": "nineinchnick/yii-usr",
-    "description": "Yii framework module for user authentication, password reset, registration and profile updating.",
-    "license": "BSD-3-Clause",
-    "authors": [
-        {
-            "name": "Jan Waś",
-            "email": "janek.jan@gmail.com",
-			"homepage": "http://niix.pl/"
-        }
-    ],
+    "name": "chrum/yii-usr",
+    "description": "(for of nineinchnick/yii-usr) Yii framework module for user authentication, password reset, registration and profile updating.",
+    "license": "",
     "require": {
-		"php": ">=5.3.0"
+		"php": ">=5.3.0",
+		"yiisoft/yii": ">=1.1.13"
     }
 }
